@@ -104,7 +104,10 @@ Release build 3
 - Align handling of protocol that becomes unused on deleting an upgrade or changing its protocol (Graham)
 - Fix bug causing change of FavWidth not to be recorded when FavDevice has default value (Graham)
 - Display message when Favorites panel New button is pressed with Digits drop-down unset (Graham)
-- Display warning message on menu option File/New why it is not recommended for creating new setups for uploading (Graham) 
+- Display warning message on menu option File/New why it is not recommended for creating new setups for uploading (Graham)
+- When File/Exit prompts user to save, ensure saving completes before RMIR exits (Graham)
+- When File/Exit performed while an Upload, Download etc task is running, display warning and confirmation request (Graham)
+- Ensure initial "changed" status following a download or file load correctly reflects the hex data state (Graham)
 
 Changes for v2.02
 -- Alpha --
